compiler/tests/en/errors/match_expr_no_value.salam
// EXPECT: E081
func main:
    x := 1
    y := match x:
        1 =>:
            z := 5
        end
        else =>: ret 0 end
    end
    println y
end
